<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <!-- LinearLayout en la parte superior -->
    <LinearLayout
        android:id="@+id/headerLayoutAuditory"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bordes_inferior_barra"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Imagen pequeña del perfil -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAuditoryImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="4dp">

            <!-- Imagen circular con ajuste -->
            <ImageView
                android:id="@+id/imageViewAuditory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/circle_profile_bg"
                android:contentDescription="@string/foto"
                android:scaleType="centerCrop"
                android:src="@drawable/image_profile_ic" /> <!-- Fondo con borde -->
        </androidx.cardview.widget.CardView>

        <!-- Título centrado -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/audit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/lilita_one"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- ScrollView para el contenido deslizable -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayoutAuditory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/marco"
            android:padding="16dp">

            <!-- Información de A, R, AR -->
            <TextView
                android:id="@+id/auditoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/auditory"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <!-- Tabla de Asignaturas -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <!-- Encabezados de la tabla -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@drawable/estilo_encabezado_tabla">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/codigo"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lilita_one"
                        android:textStyle="normal"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/asignatura"
                        android:fontFamily="@font/lilita_one"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/grado"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lilita_one"
                        android:textStyle="normal"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/notaFinal"
                        android:fontFamily="@font/lilita_one"
                        android:textStyle="normal"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:gravity="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="MAT101"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="Matemáticas"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="1"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="EXP001"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="Expresion escrita"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="1"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Barra de menú fija en la parte inferior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBottomAuditory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_superior_barra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/action_profile"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/profile_icon"
                android:contentDescription="@string/profile"
                android:padding="12dp"
                />

            <ImageButton
                android:id="@+id/action_pending_subject"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/clock_icon"
                android:contentDescription="@string/pendingSubjectItem"
                android:padding="12dp"/>

            <ImageButton
                android:id="@+id/action_home"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/baseline_home_24"
                android:contentDescription="@string/pendingSubjectItem"
                android:padding="12dp"/>

            <ImageButton
                android:id="@+id/action_subject_report"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/book_icn"
                android:contentDescription="@string/subjectReport"
                android:padding="12dp"/>

            <ImageButton
                android:id="@+id/action_audit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/audit"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:src="@drawable/auditoriaicn" />

            <ImageButton
                android:id="@+id/action_logout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_logout_with_background"
                android:contentDescription="@string/logOut"
                android:padding="12dp"/>


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>
