<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Contenedor para la imagen -->
    <LinearLayout
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_bottom_img_login"
        android:gravity="center">

        <!-- Imagen en el LinearLayout superior -->
        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_login"
            android:contentDescription="@string/imagen_de_decoracion"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <!-- Contenedor para los inputs y el botón -->
    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Título "Login" -->
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titleLogin"
            android:fontFamily="@font/lilita_one"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp" />

        <!-- Input para Carnet -->
        <EditText
            android:id="@+id/inputCarnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Carnet"
            android:fontFamily="@font/lilita_one"
            android:textColorHint="@color/letra_input"
            android:background="@drawable/input_gradient_bg"
            android:padding="12dp"
            android:textColor="@color/letra_input"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:autofillHints="username" />

        <!-- Input para Contraseña -->
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Contraseña"
            android:fontFamily="@font/lilita_one"
            android:textColorHint="@color/letra_input"
            android:background="@drawable/input_gradient_bg"
            android:padding="12dp"
            android:textColor="@color/letra_input"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="18dp"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <!-- Botón de Entrar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="160dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one"
            android:text="@string/btn_entrar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/gradient_bg_btn_login"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
